fixed a few bugs

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
               <h5>Meet your Doctor</h5>
               <div class="row">
                 <div class="col-md-3">
-                  <img src="images/gallery/doctor.jpg" class="unit-left offset-top-20">
+                  <img src="images/users/our-team-06-384x410.jpg" class="unit-left offset-top-20">
                 </div>
                 <div class="col-md-9 offset-top-20">
                   <h4>Ricky Baker M.D., F.A.C.S.</h4>
