--- a/about.html
+++ b/about.html
@@ -157,10 +157,10 @@
                     </div>
                     <div class="darktransparent offset-top-20">
                       <h5>Meet your Doctor</h5>
-                      <img src="images/gallery/doctor.jpg" class="unit-center">
+                      <img src="images/users/our-team-06-384x410.jpg" class="unit-center img-responsive">
                       <h4 class="offset-top-20">Ricky Baker M.D., F.A.C.S.</h4>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                      <div class="offset-top-20"><a href="team-member.html">Read More</a></div>
+                      <div class="offset-top-20"><a href="team-member.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
                     </div>
                   </div>
               </div>
@@ -171,51 +171,58 @@
         <section class="section-66">
           <div class="shell">
             <h5 class="text-center">Our Team</h5>
-              <div class="row">
-                <div class="col-md-4 offset-top-41">
-                  <img class="img-responsive team-member" src="images/pages/our-team-07-384x410.jpg">
-                  <div class="lighttransparent offset-top-20">
-                    <h5>Ricky Baker</h5>
-                    <p class="offset-top-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <ul class="bullets">
-                      <li>Lorem Ipsum</li>
-                      <li>Proin Gravida</li>
-                      <li>Veil Elit</li>
-                      <li>Inceptos Quam</li>
-                      <li>Orci Enim</li>
-                    </ul>
-                    <div class="offset-top-20"><a href="team-member.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
-                  </div>
+              <div class="row offset-top-60">
+                <div class="col-xs-12 col-sm-6 col-md-3">
+                    <div class="project">
+                        <figure class="img-responsive">
+                            <img class="img-responsive" src="images/users/our-team-06-384x410.jpg">
+                            <span class="actions">
+                                <div class="project-details">
+                                  <a href="team-member.html"><h6 class="text-white offset-top-10">Ricky Baker</h6></a>
+                                </div>
+                            </span>
+                        </figure>
+                        <div><a href="team-member.html" class="btn btn-ellipse btn-primary btn-project">Learn More</a></div>
+                    </div>
                 </div>
-                <div class="col-md-4 offset-top-41">
-                  <img class="img-responsive team-member" src="images/pages/our-team-08-384x410.jpg">
-                  <div class="lighttransparent offset-top-20">
-                    <h5>Ricky Baker</h5>
-                    <p class="offset-top-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <ul class="bullets">
-                      <li>Lorem Ipsum</li>
-                      <li>Proin Gravida</li>
-                      <li>Veil Elit</li>
-                      <li>Inceptos Quam</li>
-                      <li>Orci Enim</li>
-                    </ul>
-                    <div class="offset-top-20"><a href="team-member.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
-                  </div>
+                <div class="col-xs-12 col-sm-6 col-md-3">
+                    <div class="project">
+                        <figure class="img-responsive">
+                            <img class="img-responsive" src="images/users/our-team-07-384x410.jpg">
+                            <span class="actions">
+                                <div class="project-details">
+                                  <a href="team-member.html"><h6 class="text-white offset-top-10">John Doe</h6></a>
+                                </div>
+                            </span>
+                        </figure>
+                        <div><a href="team-member.html" class="btn btn-ellipse btn-primary btn-project">Learn More</a></div>
+                    </div>
                 </div>
-                <div class="col-md-4 offset-top-41">
-                  <img class="img-responsive team-member" src="images/pages/our-team-09-384x410.jpg">
-                  <div class="lighttransparent offset-top-20">
-                    <h5>Ricky Baker</h5>
-                    <p class="offset-top-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <ul class="bullets">
-                      <li>Lorem Ipsum</li>
-                      <li>Proin Gravida</li>
-                      <li>Veil Elit</li>
-                      <li>Inceptos Quam</li>
-                      <li>Orci Enim</li>
-                    </ul>
-                    <div class="offset-top-20"><a href="team-member.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
-                  </div>
+                <div class="col-xs-12 col-sm-6 col-md-3">
+                    <div class="project">
+                        <figure class="img-responsive">
+                            <img class="img-responsive" src="images/users/our-team-08-384x410.jpg">
+                            <span class="actions">
+                                <div class="project-details">
+                                  <a href="team-member.html"><h6 class="text-white offset-top-10">Staci Curtis</h6></a>
+                                </div>
+                            </span>
+                        </figure>
+                        <div><a href="team-member.html" class="btn btn-ellipse btn-primary btn-project">Learn More</a></div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-3">
+                    <div class="project">
+                        <figure class="img-responsive">
+                            <img class="img-responsive" src="images/users/our-team-09-384x410.jpg">
+                            <span class="actions">
+                                <div class="project-details">
+                                  <a href="team-member.html"><h6 class="text-white offset-top-10">Betty Smith</h6></a>
+                                </div>
+                            </span>
+                        </figure>
+                        <div><a href="team-member.html" class="btn btn-ellipse btn-primary btn-project">Learn More</a></div>
+                    </div>
                 </div>
               </div>
           </div>
