--- a/procedure.html
+++ b/procedure.html
@@ -249,7 +249,7 @@
               <h5>Meet your Doctor</h5>
               <div class="row">
                 <div class="col-md-3">
-                  <img src="images/gallery/doctor.jpg" class="unit-left offset-top-20">
+                  <img src="images/users/our-team-06-384x410.jpg" class="unit-left offset-top-20">
                 </div>
                 <div class="col-md-9 offset-top-20">
                   <h4>Ricky Baker M.D., F.A.C.S.</h4>
@@ -259,10 +259,12 @@ Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsa
                     <h6><a href="team-member.html">Read More »</a></h6>
                   </div>
                 </div>
-                <div class="col-md-12 offset-top-60 shell advert" style="background-image: url(images/backgrounds/implants.jpg);">
-                   <h5 style="font-weight:500;">Breast Augmentation</h5>
-                   <p class="offset-top-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper sit. Mauris a enim faucibus, mollis odio id, bibendum neque. Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan neque non. Mauris a enim faucibus, mollis odio id, bibendum neque.</p>
-                   <div class="offset-top-30"><a href="contacts.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
+                <div class="col-md-12 offset-top-50">
+                  <div class="shell advert" style="background-image: url(images/backgrounds/implants.jpg);">
+                     <h5 style="font-weight:500;">Breast Augmentation</h5>
+                     <p class="offset-top-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper sit. Mauris a enim faucibus, mollis odio id, bibendum neque. Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan neque non. Mauris a enim faucibus, mollis odio id, bibendum neque.</p>
+                     <div class="offset-top-30"><a href="contacts.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
+                  </div>
                 </div>
               </div>
             </div>
