--- a/team-member.html
+++ b/team-member.html
@@ -123,7 +123,7 @@
               <div class="row offset-top-60">
                   <div class="cell-xs-10 cell-md-4 col-md-4">
                     <div class="inset-md-right-20 offset-top-20 darktransparent">
-                      <img src="images/users/user-scott-riley-320x320.jpg" alt="" class="img-responsive"/>
+                      <img src="images/users/our-team-06-384x410.jpg" alt="" class="img-responsive"/>
                       <div class="member-block-body offset-top-20">
                         <a href="contacts.html" class="btn btn-ellipse btn-primary">make an appointment</a>
                         <div class="offset-top-20">
@@ -170,26 +170,30 @@
                         <li>English</li>
                         <li>Spanish</li>
                       </ul>
-                      <h5 class="text-left offset-top-20">certificates</h5>
-                      <div class="range range-xs-center range-sm-left offset-top-24">
-                        <div class="cell-xs-8 cell-sm-4"><a class="thumbnail-classic" data-photo-swipe-item="" data-size="700x970" href="images/certifications/certificate-01-700x970.jpg">
-                          <figure><img width="100" height="138" src="images/certifications/certificate-01-100x138.jpg" alt=""/>
+                      <h5 class="text-left offset-top-20">Certificates</h5>
+                      <div class="range range-xs-center range-sm-left offset-top-0">
+                        <div class="cell-xs-6 cell-sm-4"><a class="thumbnail-classic certifications" data-photo-swipe-item="" data-size="700x970" href="images/certifications/certificate-01-700x970.jpg">
+                          <figure><img class="img-responsive" src="images/certifications/certificate-01-100x138.jpg" alt=""/>
                           </figure></a>
                         </div>
-                        <div class="cell-xs-8 cell-sm-4 offset-top-20 offset-sm-top-0"><a class="thumbnail-classic" data-photo-swipe-item="" data-size="700x970" href="images/certifications/certificate-01-700x970.jpg">
-                          <figure><img width="100" height="138" src="images/certifications/certificate-01-100x138.jpg" alt=""/>
+                        <div class="cell-xs-6 cell-sm-4"><a class="thumbnail-classic certifications" data-photo-swipe-item="" data-size="700x970" href="images/certifications/certificate-01-700x970.jpg">
+                          <figure><img class="img-responsive" src="images/certifications/certificate-01-100x138.jpg" alt=""/>
                           </figure></a>
                         </div>
-                        <div class="cell-xs-8 cell-sm-4 offset-top-20 offset-sm-top-0"><a class="thumbnail-classic" data-photo-swipe-item="" data-size="700x970" href="images/certifications/certificate-01-700x970.jpg">
-                          <figure><img width="100" height="138" src="images/certifications/certificate-01-100x138.jpg" alt=""/>
+                        <div class="cell-xs-6 cell-sm-4"><a class="thumbnail-classic certifications" data-photo-swipe-item="" data-size="700x970" href="images/certifications/certificate-01-700x970.jpg">
+                          <figure><img class="img-responsive" src="images/certifications/certificate-01-100x138.jpg" alt=""/>
                           </figure></a>
                         </div>
-                        <div class="cell-xs-8 cell-sm-4 offset-top-20"><a class="thumbnail-classic" data-photo-swipe-item="" data-size="700x970" href="images/certifications/certificate-01-700x970.jpg">
-                          <figure><img width="100" height="138" src="images/certifications/certificate-01-100x138.jpg" alt=""/>
+                        <div class="cell-xs-6 cell-sm-4"><a class="thumbnail-classic certifications" data-photo-swipe-item="" data-size="700x970" href="images/certifications/certificate-01-700x970.jpg">
+                          <figure><img class="img-responsive" src="images/certifications/certificate-01-100x138.jpg" alt=""/>
                           </figure></a>
                         </div>
-                        <div class="cell-xs-8 cell-sm-4 offset-top-20"><a class="thumbnail-classic" data-photo-swipe-item="" data-size="700x970" href="images/certifications/certificate-01-700x970.jpg">
-                          <figure><img width="100" height="138" src="images/certifications/certificate-01-100x138.jpg" alt=""/>
+                        <div class="cell-xs-6 cell-sm-4 "><a class="thumbnail-classic certifications" data-photo-swipe-item="" data-size="700x970" href="images/certifications/certificate-01-700x970.jpg">
+                          <figure><img class="img-responsive" src="images/certifications/certificate-01-100x138.jpg" alt=""/>
+                          </figure></a>
+                        </div>
+                        <div class="cell-xs-6 cell-sm-4 "><a class="thumbnail-classic certifications" data-photo-swipe-item="" data-size="700x970" href="images/certifications/certificate-01-700x970.jpg">
+                          <figure><img class="img-responsive" src="images/certifications/certificate-01-100x138.jpg" alt=""/>
                           </figure></a>
                         </div>
                       </div>
