saving before trying this flex business

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper sit. Mauris a enim faucibus, mollis odio id, bibendum neque. Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan neque non. Mauris a enim faucibus, mollis odio id, bibendum neque.<br>
 Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan neque non. Mauris a enim faucibus, mollis odio id, bibendum neque. Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan.</p>
                   <div class="offset-top-20">
-                    <h6><a href="">Read More »</a></h6>
+                    <h6><a href="team-member.html">Read More »</a></h6>
                   </div>
                 </div>
                 <div class="col-md-12 offset-top-50">
